When updating ThreadLocalRandom used the old sun.misc.Unsafe rather than jdk.internal.misc.Unsafe